ログイン機能の追加

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@sidebase/nuxt-auth": "^0.9.1",
+    "consola": "^3.2.3",
+    "defu": "^6.1.4",
     "nuxt": "^3.13.0",
     "vue": "latest"
   }
