ログイン認証の追加

--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "@sidebase/nuxt-auth": "^0.9.1",
     "consola": "^3.2.3",
     "defu": "^6.1.4",
+    "firebase": "^10.13.1",
     "nuxt": "^3.13.0",
-    "vue": "latest"
+    "vue": "latest",
+    "vuefire": "^3.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10"
   }
 }
